    170_extensions.
  * testsuite 005_PgCommon: Add next_free_port tests (using /bin/nc).
  * supported-versions: Make output configurable via $PG_SUPPORTED_VERSIONS,
    ~/.pg_supported_versions, and /etc/postgresql-common/supported_versions.
    (Closes: #646700)
  * supported-versions: Add debian-backports and pgdg sections.
    (Closes: #650680)
  * debian/rules: Use sort -n for sorting supported-versions output.
  * debian/rules: Use apt-cache policy instead of apt-cache show to determine
    the "candidate" logrotate version.

 -- Martin Pitt <mpitt@debian.org>  Tue, 25 Sep 2012 07:00:30 +0200

postgresql-common (136) experimental; urgency=low

  [ Martin Pitt ]
  * debian/backport-ppa: Do first upload with orig tarball, subsequent ones
    without.
  * debian/backport-ppa: Do not run lintian.
  * debian/backport-ppa: When building postgresql-9.1 for lucid, drop the
    library packages as they collide with the ones built from postgresql-9.2.
  * debian/backport-ppa: Build 9.2 for Quantal and Natty.
  * debian/supported-versions: Add Ubuntu 12.10.
  * t/030_errors.t: For the "fails on insufficient disk space test", move from
    setting up a loop device to a tmpfs in unshare -m. This is more robust for
    cleaning up after itself, and faster as well.
  * pg_ctlcluster: Fix log output to stderr if the log file started out being
    empty. Add test case to t/030_errors.t.
  * debian/maintscripts-functions: Only try to remove the tsearch_data
    directory  if it already exists. Thanks Peter Palfrader. (Closes: #688105)

  [ Christoph Berg ]
  * pg_buildext: Fix supported-versions not to die when the last version is
    not supported.
  * testsuite: Add getopt handling, and make the list of umasks to loop
    through configurable (-u).
  * t/001_packages.t: Print list of installed versions for information.
  * As debian/supported-versions is also used at build-time, add a
    build-dependency on lsb-release for lsb_release to be available. Also,