@@ -362,7 +362,7 @@ if ($info{'logfile'} && ! -e $info{'logfile'}) {
 if ($> == 0) {
     # have the postmaster start with increased OOM killer protection; 9.1 and
     # later has builtin support for resetting the adjustment of child processes
-    if ($action eq 'start' && $version ge '9.1') {
+    if ($action eq 'start' && $version >= '9.1') {
         if (-w '/proc/self/oom_score_adj') {
 	    open F, '>/proc/self/oom_score_adj';
 	    print F "-900\n";
