@@ -13,7 +13,7 @@ print "Info: PostgreSQL versions installed: @MAJORS\n";
 foreach my $v (@MAJORS) {
     ok ((deb_installed "postgresql-$v"), "postgresql-$v installed");
     ok ((deb_installed "postgresql-plpython-$v"), "postgresql-plpython-$v installed");
-    if ($v ge '9.1') {
+    if ($v >= '9.1') {
 	ok ((deb_installed "postgresql-plpython3-$v"), "postgresql-plpython3-$v installed");
     } else {
 	pass "no Python 3 package for version $v";
