@@ -7,7 +7,7 @@ use strict;
 use lib 't';
 use TestLib;
 
-use Test::More tests => ($#MAJORS == 0 || $MAJORS[0] ge '8.3') ? 1 : 19 * 3 + 10;
+use Test::More tests => ($#MAJORS == 0 || $MAJORS[0] >= '8.3') ? 1 : 19 * 3 + 10;
 
 use lib '/usr/share/postgresql-common';
 use PgCommon;
@@ -17,7 +17,7 @@ if ($#MAJORS == 0) {
         exit 0;
 }
 
-if ($MAJORS[0] ge '8.3') {
+if ($MAJORS[0] >= '8.3') {
         pass 'test only relevant for oldest version < 8.3, skipping';
         exit 0;
 }
