@@ -24,7 +24,7 @@ is ((exec_as 0, "pg_createcluster --start --locale=ru_RU $oldv main", $outref), 
 
 is ((exec_as 'postgres', 'psql -c "create database latintest" template1', $outref), 0,
     "creating latintest DB with LATIN encoding");
-if ($oldv le '8.3') {
+if ($oldv <= '8.3') {
     is ((exec_as 'postgres', 'psql -c "create database asctest encoding = \'SQL_ASCII\'" template1', $outref), 0,
 	"creating asctest DB with ASCII encoding");
 } else {
